# orgApp

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
issues/: pyproject.toml
orgapp/: logos.py  main.py
orgapp/address_book/: README.md  __main__.py  address_book.py  classes_ab.py
orgapp/bandergoose/: __init__.py  bandergoose.py
orgapp/folder_cleaner/: README.md  folder_cleaner.py
orgapp/hannoitower/: __init__.py  hannoitower.py
orgapp/note_book/: README.md  __main__.py  classes_nb.py  note_book.py
orgapp/snake/: __main__.py  snake.py
orgapp/sorter/: README.md  __main__.py  sorter.py
orgapp/tictactoe/: __init__.py  tictactoe.py
